# ocl-prefix-summ

./: CMakeLists.txt  README.md  input.txt  kernel.cl  main.cpp  output.txt
